--- a/generators/app/templates/src/index.pug
+++ b/generators/app/templates/src/index.pug
@@ -7,6 +7,8 @@ block config
   - var pageTitle = 'Amiculum Digital'
   - var page = 'homepage'
   - var site = htmlWebpackPlugin.options //global site data
+  - var env = site.env
+  - var dir = site.directory
 
 block content
   .yeo-info
