--- a/generators/module/templates/module.scss
+++ b/generators/module/templates/module.scss
@@ -1,1 +1,4 @@
 //<%= name %> styles 
+// Path used for Background URL
+// i.e. background: url($path + 'assets/images/sample_img.jpg);
+// $path will change dynamically based on the env
